# stochtree

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CPP_DEPS_LICENSE.md  DESCRIPTION  Doxyfile  LICENSE  LICENSE.md  MANIFEST.in  NAMESPACE  NEWS.md  README.md  RELEASING.md  R_README.md  _pkgdown.yml  configure  configure.ac  configure.win  cran-bootstrap.R  cran-cleanup.R  cran-comments.md  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_update.md  feature_request.md  release.md
.github/workflows/: build-docs.yml  cpp-test.yml  cross-language-parity.yml  custom-release-candidate.yml  pypi-wheels.yml  python-test.yml  r-cran-branch.yml  r-custom-release-candidate.yml  r-devel-check.yml  r-python-slow-api-test.yml  r-test.yml  r-valgrind-check.yml  rc-refresh.yml  regression-test.yml  reproducibility_check.yml  rhub.yaml  slow-api-test.yml  test-multi-platform.yml
R/: bart.R  bcf.R  calibration.R  cloglog_ordinal_bart.R  config.R  cpp11.R  data.R  forest.R  generics.R  kernel.R  model.R  posterior_transformation.R  random_effects.R  samples.R  serialization.R  stochtree-package.R  utils.R  variance.R
R-package/: .Rbuildignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE
R-package/R/: bart.R  cpp11.R  data.R  forest.R  model.R  predictor.R  sampling.R  stochtree-package.R  utils.R  variance.R  xbart.R
R-package/demo/: bart_comparison.R  bart_demo.R  demo.R  interface_demo.R  xbart_demo.R
R-package/man/: CppRNG.Rd  ForestDataset.Rd  ForestModel.Rd  ForestSamples.Rd  Outcome.Rd  bart.Rd  createForestDataset.Rd  createForestModel.Rd  create_column_vector.Rd  create_forest_dataset.Rd  dataset_update_basis.Rd  forest_container.Rd  forest_tracker.Rd  predict.bart_samples.Rd  predict.xbart_samples.Rd  predict_forest.Rd  predict_forest_raw.Rd  xbart.Rd  (+7 more)
cpp_docs/: Doxyfile  README.md  conf.py  dataset.rst  index.rst  requirements.txt  tracking.rst  tree.rst
debug/: README.md  api_debug.cpp  bart.cpp  bart_debug.cpp  bart_sampler.cpp  bcf_debug.cpp  bcf_sampler.cpp  benchmark_cpp_vs_py_sampler.py  benchmark_cpp_vs_py_sampler_bcf.py  benchmark_cpp_vs_py_sampler_bcf_adaptive_coding.py  benchmark_cpp_vs_py_sampler_bcf_multivariate.py  benchmark_cpp_vs_py_sampler_bcf_probit.py  benchmark_cpp_vs_py_sampler_bcf_tau_intercept.py  benchmark_cpp_vs_py_sampler_cloglog.py  benchmark_cpp_vs_py_sampler_heteroskedastic.py  benchmark_cpp_vs_py_sampler_leaf_regression.py  benchmark_cpp_vs_py_sampler_multivariate_leaf_regression.py  benchmark_cpp_vs_py_sampler_ordinal_cloglog.py  benchmark_cpp_vs_py_sampler_probit.py  benchmark_cpp_vs_py_sampler_rfx.py  benchmark_cpp_vs_r_sampler.R  benchmark_cpp_vs_r_sampler_bcf.R  benchmark_cpp_vs_r_sampler_bcf_adaptive_coding.R  benchmark_cpp_vs_r_sampler_bcf_multivariate.R  benchmark_cpp_vs_r_sampler_bcf_probit.R  benchmark_cpp_vs_r_sampler_bcf_tau_intercept.R  benchmark_cpp_vs_r_sampler_cloglog.R  benchmark_cpp_vs_r_sampler_heteroskedastic.R  benchmark_cpp_vs_r_sampler_leaf_regression.R  benchmark_cpp_vs_r_sampler_multivariate_leaf_regression.R  benchmark_cpp_vs_r_sampler_ordinal_cloglog.R  benchmark_cpp_vs_r_sampler_probit.R  benchmark_cpp_vs_r_sampler_rfx.R
docs/: README.md
inst/: COPYRIGHTS
man/: BARTSerialization.Rd  BCFSerialization.Rd  BartJSON.Rd  BartSerialization.Rd  CppJson.Rd  CppRNG.Rd  DataPreprocessing.Rd  Forest.Rd  ForestDataset.Rd  ForestKernel.Rd  ForestKernelComputation.Rd  ForestModel.Rd  ForestModelConfig.Rd  ForestSamples.Rd  ForestSamplesSerialization.Rd  ForestStateManagement.Rd  GlobalModelConfig.Rd  JSONCreation.Rd  Outcome.Rd  OutcomeModel.Rd  RandomEffectSamples.Rd  RandomEffectSamplesSerialization.Rd  RandomEffectStateManagement.Rd  RandomEffectsDataset.Rd  RandomEffectsModel.Rd  RandomEffectsTracker.Rd  average_max_depth_bart_generalized.Rd  average_max_depth_bart_specialized.Rd  bart.Rd  bart_cpp_loop_generalized.Rd  bart_cpp_loop_specialized.Rd  bart_specialized.Rd  bcf.Rd  calibrateInverseGammaErrorVariance.Rd  calibrate_inverse_gamma_error_variance.Rd  cloglog_ordinal_bart.Rd  computeBARTPosteriorInterval.Rd  computeBCFPosteriorInterval.Rd  computeContrastBARTModel.Rd  computeContrastBCFModel.Rd  (+124 more)
notes/: README.md  bart_full_procedure.md
python-package/: CMakeLists.txt  setup.py
python-package/demo/: bart_demo.ipynb  causal_inference.ipynb  supervised_learning.ipynb  xbart_demo.ipynb
python-package/src/: stochtree.cpp
python-package/stochtree/: __init__.py  bart.py  data.py  forest.py  sampler.py  utils.py  xbart.py
python_docs/: README.md  requirements.txt
src/: Makevars  Makevars.in  Makevars.win.in  R_bart.cpp  R_bart.h  R_bcf.cpp  R_data.cpp  R_random_effects.cpp  R_samples.cpp  R_utils.cpp  bart.cpp  bart_sampler.cpp  bcf_sampler.cpp  config.cpp  container.cpp  cpp11.cpp  cutpoint_candidates.cpp  data.cpp  dispatcher.cpp  forest.cpp  interface.cpp  io.cpp  json11.cpp  kernel.cpp  leaf_model.cpp  main.cpp  model.cpp  model_draw.cpp  model_graph.cpp  ordinal_sampler.cpp  partition_tracker.cpp  prediction.cpp  py_stochtree.cpp  random_effects.cpp  random_effects_sampler.cpp  sampler.cpp  serialization.cpp  stochtree_types.h  train_data.cpp  tree.cpp
stochtree/: __init__.py  bart.py  bcf.py  calibration.py  cloglog_ordinal_bart.py  config.py  data.py  forest.py  kernel.py  plotting.py  preprocessing.py  random_effects.py  sampler.py  serialization.py  sklearn.py  utils.py
test/: README.md  test_data.cpp  test_model.cpp  test_random_effects.cpp  test_sorted_partition_tracker.cpp  test_tree.cpp  testutils.cpp  testutils.h
tools/: cloglog_ordinal_bart_four_category.R  cloglog_ordinal_bart_three_category.R
vignettes/: BayesianSupervisedLearning.Rmd  CLogLogOrdinalBart.Rmd  CausalInference.Rmd  CustomSamplingRoutine.Rmd  EnsembleKernel.Rmd  Heteroskedasticity.Rmd  ModelSerialization.Rmd  MultiChain.Rmd  OrdinalOutcome.Rmd  PriorCalibration.Rmd  ReparameterizedCausalInference.Rmd  Summary.Rmd  TreeInspection.Rmd  vignettes.bib
(+404 files in other folders)
